<resources>
    <string name="app_name">Naval Games Assistant</string>

    <!-- Length units and symbols -->
    <string name="millimetre">Millimetre</string>
    <string name="inch">Inch</string>
    <string name="millimetre_symbol">&#160;mm</string>
    <string name="inch_symbol">&#160;in</string>

    <!-- Converter -->
    <string name="text_result">Result:&#160;</string>
    <string name="result_button">Result</string>
    <string name="edit_field_empty">The field must be filled</string>
    <string name="edit_field_non_positive">The value must be positive</string>
    <string name="input_mm">Enter the value in \"millimetre\"</string>
    <string name="input_in">Enter the value in \"inch\"</string>
    <string name="input_temp">Enter the value</string>

    <!-- Other -->
    <string name="zero_hint">0</string>
    <string name="swap_source_and_result_units_and_values">Swap source and result units and values button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>