<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterFragment">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_result"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/checked_value"
        app:layout_constraintEnd_toStartOf="@+id/checked_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checked_value">

        <!-- TODO вернуть значение 0.0 -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_temp"
            android:inputType="number"
            android:text="0" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/checked_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:checkedButton="@id/check_inch"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult">

        <RadioButton
            android:id="@+id/check_inch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inch" />

        <RadioButton
            android:id="@+id/check_millimetre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/millimetre" />
    </RadioGroup>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLayout">

        <Button
            android:id="@+id/button_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_button" />

        <Button
            android:id="@+id/button_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />

        <Button
            android:id="@+id/button_minus10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-10" />

        <Button
            android:id="@+id/button_plus10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+10" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>